test: expand automation coverage and TCM docs